--- a/my_inventory_system/django_project/templates/store/issue_history.html
+++ b/my_inventory_system/django_project/templates/store/issue_history.html
@@ -4,17 +4,17 @@
 
 <div class="card">
     <div class="card-body">
-        <h4>Items Issue History</h4>
+        <h4>Mahsulotlar muammosi tarixi</h4>
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th scope="col">Item name</th>
-                    <th scope="col">Issued Amount</th>
-                    <th scope="col">Issued By</th>
-                    <th scope="col">Issued To</th>
-                    <th scope="col">Department</th>
-                    <th scope="col">Date Issued</th>
-                    <th scope="col">Return Date</th>
+                    <th scope="col">Mahsulot nomi</th>
+                    <th scope="col">Chiqarilgan miqdor</th>
+                    <th scope="col">Berilgan tomonidan</th>
+                    <th scope="col">Chiqarilgan miqdor</th>
+                    <th scope="col">Muassa</th>
+                    <th scope="col">Muammo berilgan sanasi</th>
+                    <th scope="col">Qaytarilgan sanasi</th>
                 </tr>
             </thead>
             <tbody>
