--- a/my_inventory_system/django_project/templates/store/issue_item.html
+++ b/my_inventory_system/django_project/templates/store/issue_item.html
@@ -3,31 +3,31 @@
 
 {% block content %}
 
-<h5>Issue an Item</h5>
+<h5>Mahsulotlar muammosi</h5>
 <form class="p-4 p-md-5 border rounded-3 bg-light" method="POST">
     {% csrf_token %}
     
     <div class="form-floating mb-3">
         {% render_field form.item class="form-control" %}
-        <label for="floatingInput">Item Name</label>
+        <label for="floatingInput">Mahsulot nomi</label>
     </div>
     <div class="form-floating mb-3">
         {% render_field form.issued_amount class="form-control" %}
-        <label for="floatingInput">Issued Amount</label>
+        <label for="floatingInput">Soni</label>
     </div>
     <div class="form-floating mb-3">
         {% render_field form.issued_to class="form-control" %}
-        <label for="floatingInput">Issued To</label>
+        <label for="floatingInput">ga berilgan</label>
     </div>
     <div class="form-floating mb-3">
         {% render_field form.department class="form-control" %}
-        <label for="floatingInput">Department</label>
+        <label for="floatingInput">Muassa</label>
     </div>
     <div class="form-floating mb-3">
         {% render_field form.return_date type="date" class="form-control" %}
-        <label for="floatingInput">Return Date</label>
+        <label for="floatingInput">Qayatarilgan sanasi</label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Submit</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Yuborish</button>
 </form>
 
 {% endblock content %}
