--- a/my_inventory_system/django_project/templates/store/restock_history.html
+++ b/my_inventory_system/django_project/templates/store/restock_history.html
@@ -4,14 +4,14 @@
 
 <div class="card">
     <div class="card-body">
-        <h4>Items Restock History</h4>
+        <h4>To`ldirilgan mahsulotlar tarixi</h4>
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th scope="col">Item name</th>
-                    <th scope="col">Amount</th>
-                    <th scope="col">Restocked Date</th>
-                    <th scope="col">Initial Value</th>
+                    <th scope="col">Mahsulot nomi/th>
+                    <th scope="col">Soni</th>
+                    <th scope="col">To`ldirilgan sanasi</th>
+                    <th scope="col">Mahsulotlarni to`ldirish</th>
                 </tr>
             </thead>
             <tbody>
