--- a/my_inventory_system/django_project/templates/store/return_history.html
+++ b/my_inventory_system/django_project/templates/store/return_history.html
@@ -4,14 +4,14 @@
 
 <div class="card">
     <div class="card-body">
-        <h4>Items Return History</h4>
+        <h4>Qaytarilgan mahsulotlar tarixi</h4>
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th scope="col">Item name</th>
-                    <th scope="col">Returned By</th>
-                    <th scope="col">Return Date</th>
-                    <th scope="col">Return Amount</th>
+                    <th scope="col">Mahsulot nomi</th>
+                    <th scope="col">Qaytarildi tomonidan </th>
+                    <th scope="col">Qaytarilgan sana</th>
+                    <th scope="col">Qaytarilgan soni</th>
                 </tr>
             </thead>
             <tbody>
