--- a/my_inventory_system/django_project/templates/store/update_item.html
+++ b/my_inventory_system/django_project/templates/store/update_item.html
@@ -9,9 +9,9 @@
     
     <div class="form-floating mb-3">
         {% render_field form.name class="form-control" %}
-        <label for="floatingInput">Item Name</label>
+        <label for="floatingInput">Mahsulot nomi</label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Submit</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Yuborish</button>
 </form>
 
 {% endblock content %}
