--- a/my_inventory_system/django_project/templates/users/register.html
+++ b/my_inventory_system/django_project/templates/users/register.html
@@ -15,13 +15,13 @@
     </div>
     <div class="form-floating mb-3">
         {% render_field form.password1 class="form-control" %}
-        <label for="floatingInput">Enter Password</label>
+        <label for="floatingInput">Parolingizni kiriting</label>
     </div>
     <div class="form-floating mb-3">
         {% render_field form.password2 class="form-control" %}
-        <label for="floatingInput">Confirm Password</label>
+        <label for="floatingInput">Parolingizni tasdiqlang</label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" >Sign Up</button>
+    <button class="w-100 btn btn-lg btn-primary" >Kirish</button>
     <hr class="my-4">
     <!-- <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small> -->
     <small class="text-muted">Don't have an account? <a href="{% url 'login' %}">Sign In</a></small>
