--- a/my_inventory_system/django_project/templates/store/return_item.html
+++ b/my_inventory_system/django_project/templates/store/return_item.html
@@ -3,23 +3,23 @@
 
 {% block content %}
 
-<h5>Return an Item</h5>
+<h5>Qaytarilgan mahsulotlar</h5>
 <form class="p-4 p-md-5 border rounded-3 bg-light" method="POST">
     {% csrf_token %}
     
     <div class="form-floating mb-3">
         {% render_field form.item class="form-control" %}
-        <label for="floatingInput">Item Name</label>
+        <label for="floatingInput">Mahsulot nomi</label>
     </div>
     <div class="form-floating mb-3">
         {% render_field form.returned_amount class="form-control" %}
-        <label for="floatingInput">Returned Amount</label>
+        <label for="floatingInput">Qaytarilgan soni</label>
     </div>
     <div class="form-floating mb-3">
         {% render_field form.returned_by class="form-control" %}
-        <label for="floatingInput">Returned by</label>
+        <label for="floatingInput">Qaytarildi tomonidan </label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Submit</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Yuborish</button>
 </form>
 
 {% endblock content %}
