--- a/my_inventory_system/django_project/templates/users/login.html
+++ b/my_inventory_system/django_project/templates/users/login.html
@@ -10,7 +10,7 @@
     </div>
     <div class="form-floating mb-3">
         <input type="password" name="password"class="form-control" id="floatingPassword" required>
-        <label for="floatingPassword">Password</label>
+        <label for="floatingPassword">Parol</label>
     </div>
     <!-- <div class="checkbox mb-3">
         <label>
