--- a/my_inventory_system/django_project/templates/dashboard/dashboard.html
+++ b/my_inventory_system/django_project/templates/dashboard/dashboard.html
@@ -4,7 +4,7 @@
      <div class="p-4 mb-5 rounded-3 shadow text-white" style="background: linear-gradient(135deg, #0d6efd, #6610f2);">
         <div class="container-fluid py-4 text-center">
             <h2 class="fw-bold">Welcome to Inventory Management </h2>
-            <p class="fs-5 mt-2">Tizim orqali ovqatlanish menyularini boshqarish, mahsulot zaxiralarini nazorat qilish va hisobotlarni tezkor olish imkoniyati mavjud</p>
+            <p class="fs-5 mt-2">Tizim orqali kiyimlarni boshqarish, mahsulot zaxiralarini nazorat qilish va hisobotlarni tezkor olish imkoniyati mavjud.</p>
             <a href="{% url 'all-items' %}" class="btn btn-outline-light btn-lg mt-3">Mahsulotlar</a>
         </div>
     </div>
