--- a/my_inventory_system/django_project/templates/users/base.html
+++ b/my_inventory_system/django_project/templates/users/base.html
@@ -85,11 +85,10 @@
       <div class="col-lg-7 text-center text-lg-start">
         <h1 class="display-4 fw-bold lh-1 mb-3">Welcome to Inventory Management</h1>
         <p class="col-lg-10 fs-5">
-          Tizim orqali ovqatlanish menyularini boshqarish, mahsulot zaxiralarini nazorat qilish va hisobotlarni tezkor olish imkoniyati mavjud.
+          Tizim orqali kiyimlarni boshqarish, mahsulot zaxiralarini nazorat qilish va hisobotlarni tezkor olish imkoniyati mavjud.
         </p>
       </div>
       <div class="col-md-10 mx-auto col-lg-5">
-
         {% if messages %}
         {% for message in messages %}
         <div class="alert alert-{{ message.tags }}" role="alert">
@@ -97,7 +96,6 @@
         </div>
         {% endfor %}
         {% endif %}
-
         {% block content %}
         <form method="post" class="p-4 p-md-5 border rounded-3 bg-light">
           {% csrf_token %}
@@ -118,7 +116,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-
   <script>
     function toggleMode() {
       const body = document.body;
