--- a/my_inventory_system/django_project/templates/store/restock_history.html
+++ b/my_inventory_system/django_project/templates/store/restock_history.html
@@ -8,7 +8,7 @@
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th scope="col">Mahsulot nomi/th>
+                    <th scope="col">Mahsulot nomi</th>
                     <th scope="col">Soni</th>
                     <th scope="col">To`ldirilgan sanasi</th>
                     <th scope="col">Mahsulotlarni to`ldirish</th>
