--- a/my_inventory_system/django_project/templates/base.html
+++ b/my_inventory_system/django_project/templates/base.html
@@ -229,7 +229,7 @@
         <button onclick="toggleMode()" class="btn-toggle" title="Rejimni o‘zgartirish">
           <i class="fa fa-moon"></i>
         </button>
-        <a href="{% url 'logout' %}" class="btn btn-primary btn-sm">exit</a>
+        <a href="{% url 'logout' %}" class="btn btn-primary btn-sm">Chiqish</a>
       </div>
     </div>
   </div>
